GNOME Bugzilla – Bug 776233
assertion when reading unrotated image from Minolta camera
Last modified: 2016-12-18 20:43:10 UTC
Created attachment 342157 [details] [review] patch that fixes the problem When reading an image from certain Minolta cameras (my old 7D for instance), there is some special code since apparently the camera didn't produce all the correct tags. However, this special code raises an assertion since https://github.com/GNOME/gexiv2/commit/02f97b262c315da2b46ac486a2c3e019d8cd925f that basically says that the image *must* be rotated by either 90 degrees or 270 degrees. If neither is the case, e.g. the image doesn't need any rotation, the assertion goes off. Attached is a patch that works for me. It merely removes the incorrect assertions. Also see https://bugzilla.redhat.com/show_bug.cgi?id=1401706.
Review of attachment 342157 [details] [review]: Thank you for your patch. Just removing the default case is not good. At least the assertion should be switched against a log. Do you know what values are written there?
Created attachment 342174 [details] [review] get_orientation: Fix abort on Minolta meta-data Properly handle rotation value 72 (not rotated) https://bugzilla.redhat.com/show_bug.cgi?id=1401706 Signed-off-by: Jens Georg <mail@jensge.org>
Review of attachment 342174 [details] [review]: m
Fixed on master
Thanks for the very quick reaction and fix.