get_orientation: Fix abort on Minolta meta-data

Properly handle rotation value 72 (not rotated)

https://bugzilla.redhat.com/show_bug.cgi?id=1401706
https://bugzilla.gnome.org/show_bug.cgi?id=776233

Signed-off-by: Jens Georg <mail@jensge.org>